--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body,
 html {
   box-sizing: border-box;
-  background: #f5f5f5;
+  background: linear-gradient(0deg,rgba(0,0,0,.04),rgba(0,0,0,.04)),#FFFFFF;
 }
